Add retry button

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <button class="items" id="rock">Rock</button>
     <button class="items" id="paper">Paper</button>
     <button class="items" id="scissors">Scissors</button>
-    <p><span id="player"></span> vs <span id="enemy"></span></p>
-
+    <p id="fight">
+        <span id="player"></span> vs <span id="enemy"></span>
+    </p>
 
     <span id="result"></span>
 
+    <button id="retry">Retry</button>
     <script src="main.js" async defer></script>
 </body>
 
