--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 
 <body>
+    <div id="items-container" class="show">
+        <img class="items" id="rock" src="assets/rock.png" />
+        <img class="items" id="paper" src="assets/paper.png" />
+        <img class="items" id="scissors" src="assets/scissors.png" />
+    </div>
 
-    <button class="items" id="rock">Rock</button>
-    <button class="items" id="paper">Paper</button>
-    <button class="items" id="scissors">Scissors</button>
     <p id="fight">
-        <span id="player"></span> vs <span id="enemy"></span>
+        <img id="player" /> vs <img id="enemy" />
     </p>
 
     <span id="result"></span>
