Change elements positions

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 </head>
 
 <body>
-    <div id="items-container" class="show">
-        <img class="items" id="rock" src="assets/rock.png" />
-        <img class="items" id="paper" src="assets/paper.png" />
-        <img class="items" id="scissors" src="assets/scissors.png" />
+    <div id="fight">
+        <div id="player">
+            <img class="items show" id="rock" src="assets/rock.png" />
+            <img class="items show" id="paper" src="assets/paper.png" />
+            <img class="items show" id="scissors" src="assets/scissors.png" />
+        </div>
+        <span id="versus">VS</span>
+        <div id="enemy">
+            <img class="items" />
+        </div>
     </div>
-
-    <p id="fight">
-        <img id="player" /> vs <img id="enemy" />
-    </p>
 
     <span id="result"></span>
 
