Add paper cut animation

--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
             <img class="items show" id="rock" src="assets/rock.png" />
             <img class="items show" id="paper" src="assets/paper.png" />
             <img class="items show" id="scissors" src="assets/scissors.png" />
+            <div id="losing-item">
+                <div class="paper-parts top"></div>
+                <div class="paper-parts bottom"></div>
+            </div>
         </div>
         <span id="versus">VS</span>
         <div id="enemy">
             <img class="items" />
+            <div id="losing-item">
+                <div class="paper-parts top"></div>
+                <div class="paper-parts bottom"></div>
+            </div>
         </div>
     </div>
 
