Add broken scissors animation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             <div id="losing-item">
                 <div class="paper-parts top"></div>
                 <div class="paper-parts bottom"></div>
+                <div class="scissors-parts top-left"></div>
+                <div class="scissors-parts bottom-left"></div>
+                <div class="scissors-parts top-right"></div>
+                <div class="scissors-parts bottom-right"></div>
             </div>
         </div>
         <span id="versus">VS</span>
