Add animation for winning scissors

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <div class="scissors-parts top-right"></div>
                 <div class="scissors-parts bottom-right"></div>
             </div>
+            <div id="winning-item">
+                <div class="scissors-cutting"></div>
+            </div>
         </div>
         <span id="versus">VS</span>
         <div id="enemy">
