Add winning paper animation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </div>
             <div id="winning-item">
                 <div class="scissors-cutting"></div>
+                <div class="paper-covering"></div>
             </div>
         </div>
         <span id="versus">VS</span>
