Add winning rock animation

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div id="winning-item">
                 <div class="scissors-cutting"></div>
                 <div class="paper-covering"></div>
+                <div class="rock-breaking"></div>
             </div>
         </div>
         <span id="versus">VS</span>
