--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <img class="items show" id="paper" src="assets/paper.png" />
             <img class="items show" id="scissors" src="assets/scissors.png" />
             <div id="losing-item">
+                <div class="losing-rock"></div>
                 <div class="paper-parts top"></div>
                 <div class="paper-parts bottom"></div>
                 <div class="scissors-parts top-left"></div>
